swim_form/src/tests/derive/unimplemented/unimplemented_vector.stderr
error[E0277]: the trait bound `u32: swim_form::Form` is not satisfied
  --> $DIR/unimplemented_vector.rs:23:1
   |
23 | #[form(Value)]
   | ^^^^^^^^^^^^^^ the trait `swim_form::Form` is not implemented for `u32`
   |
   = help: see issue #48214
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
